CS_SBOX_20150209_01/Metadata/unpackaged/objects/BDC_Activity_Type__c.object
<CustomObject>
    <description>Hold the Activity Types for the BDC Activities that should be created from a Renewal Opp</description>
    <fields>
        <fullName>Call_Template__c</fullName>
        <description>The template for the Renewal Call</description>
        <label>Call Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_Months__c</fullName>
        <description>Should the number entered be taken to be either Days or Months</description>
        <label>Days/Months</label>
        <picklist>
            <picklistValues>
                <fullName>Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>The Date to set the Due Date Against</description>
        <label>From</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal Creation Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Due Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Renewal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only create this Activity if the Customer is a New Renewal Customer</description>
        <label>New Renewal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Months__c</fullName>
        <description>The Number of Days or Months from either the Creation Date or Due Date that Task should have its Due Date Set As</description>
        <label>Number of Days/Months</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BDC Activity Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>New_Renewal_Customer__c</columns>
        <columns>Number_of_Days_Months__c</columns>
        <columns>Days_Months__c</columns>
        <columns>From__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BDC Activity Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BDC Activity Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>